# Audio-Pedals

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  PedalBoard.cpp  PedalBoard.hpp  README.md  main  main.cpp
examples/: sinWaveGeneration.rs
include/: properties.hpp
src/: main.rs  processor.rs
src/converter/: frames_to_wav.rs  mod.rs  mp3_to_frames.rs
src/dsp/: distortion.rs
